--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon src/app"
+    "dev": "nodemon ./src/app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "*",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.1",
