Add jwt generate script

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon ./src/app"
+    "dev": "nodemon ./src/app",
+    "jwt:generate": "node ./scripts/jwt-generate"
   },
   "author": "",
   "license": "ISC",
