--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "jwt:generate": "node ./scripts/jwt-generate",
     "make-model": "sequelize model:create --name example --attributes name:string",
     "make-seed": "sequelize seed:generate --name example",
-    "seed": "sequelize db:seed:all"
+    "seed": "sequelize db:seed:all",
+    "migrate": "sequelize db:migrate",
+    "undo-migrate": "sequelize db:migrate:undo:all"
   },
   "author": "",
   "license": "ISC",
